
Emulation:

Emulator:
- Option to disable Falcon mic
  ("--mic off" is needed for Mudflap debugging)
- Atari program given as argument to Hatari will be automatically
  started after TOS boots. GEMDOS hard disk directory can now be
  give also as an argument, not just an option
- BIOS CON: output is converted to ASCII and redirected to host console
  with the --bios-intercept option
- Debugger:
  - BIOS/XBIOS/GEMDOS/VDI/AES/Line-A/Line-F opcode breakpoint support
  - DSP and CPU code profiling functionality.  Provides statistics about
    profiled code (executed code address ranges, max and total counts
    and cycles), lists addresses/instructions taking most cyles and if
    symbols are loaded, what were the most used symbol addresses.
  - Profiling information is also shown in disassembly output

Other changes:
- hmsa tool can create empty disk images in addition to converting
  disks between ST & MSA formats
- Minimal hatari-tos-register.sh Linux init script (example)
  to register Hatari as binfmt_misc handler/runner for TOS programs
- Support for plain Makefiles removed, (except for internal tests)
  only CMake is used for configuring and building Hatari


 Version 1.4.0 (2010-06-12):
 ---------------------------

Emulation:
- IDE improvements:
  - Support for second drive (IDE slave)
  - WIN_FORMAT command (allows HD Driver to format IDE drives)
- GEMDOS HDD emulation:
  - Minor fixes to Fseek(), Fopen(), Fdatime() (e.g. Pure debugger works)
  - On TOS v4 Fread() size arg is unsigned, on earlier TOS its signed
    (bad code can use -1L to read whole file instead getting fail on TOS4)
  - Prevent DTA and read/write functions accessing invalid memory areas
  - Programs can now change read-only files to be writable
- Falcon sound emulation:
  - Microphone (jack) emulation in Falcon mode (requires portaudio library)
  - SSI direct sound entrance ("Audio Fun Machine" and winrec are working)
  - DMA sound recording
  - Crossbar handshake mode transfers