@@ -252,8 +252,8 @@ load keyboard mapping from <file>
 Toggle whether CPU exceptions invoke the debugger
 .TP 
 .B \-\-bios-intercept
-Enable Bios/XBios call interception and redirect BIOS
-CON: output (e.g. EmuTOS console) to host terminal.
+Toggle Bios/XBios call interception and BIOS CON: output
+(e.g. EmuTOS console) redirection to host terminal.
 Needed for Bios/XBios call tracing. Allows Atari programs
 to modify Hatari state through XBios 255 calls.
 .TP
